--- a/index.html
+++ b/index.html
@@ -133,6 +133,35 @@
         #render-btn {
             flex: 1;
         }
+        .overlay-text-input {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background: transparent;
+            border: none;
+            color: white;
+            font-size: 24px;
+            text-align: center;
+            width: 80%;
+            outline: none;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
+            display: none;
+            z-index: 1000;
+            cursor: move;
+            user-select: none;
+            resize: none;
+            overflow: hidden;
+            min-height: 1em;
+            max-height: 80vh;
+            white-space: pre-wrap;
+        }
+        .overlay-text-input.active {
+            display: block;
+        }
+        .overlay-text-input:focus {
+            cursor: text;
+        }
     </style>
 </head>
 <body>
