--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             border: none;
             color: white;
             font-size: 24px;
-            text-align: center;
+            text-align: left;
             width: 80%;
             outline: none;
             text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
