--- a/index.html
+++ b/index.html
@@ -5,24 +5,21 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            padding: 20px;
+            margin: 0;
+            padding: 0;
             background-color: #f0f0f0;
+            height: 100vh;
+            overflow: hidden;
         }
         #video-container {
-            margin: 20px 0;
-            max-width: 800px;
-            width: 100%;
+            width: 100vw;
+            height: 100vh;
             position: relative;
-            border-radius: 8px;
             background-color: #e0e0e0;
-            min-height: 300px;
             display: flex;
             align-items: center;
             justify-content: center;
-            border: 3px dashed #ccc;
+            border: none;
             transition: all 0.3s ease;
         }
         #video-container.drag-over {
@@ -43,12 +40,6 @@
         }
         video.has-video {
             display: block;
-        }
-        .input-container {
-            width: 80%;
-            margin: 10px 0;
-            display: flex;
-            gap: 10px;
         }
         #text-input, #url-input {
             padding: 10px;
@@ -108,11 +99,6 @@
         #file-btn:hover {
             background-color: #1976D2;
         }
-        .button-container {
-            display: flex;
-            gap: 10px;
-            width: 80%;
-        }
         #copy-btn {
             padding: 10px 20px;
             background-color: #9C27B0;
@@ -165,23 +151,11 @@
     </style>
 </head>
 <body>
-    <h1>Video Text Editor</h1>
     <div id="video-container">
         <div id="drop-text">Drag and drop a video here</div>
         <video id="video-preview" controls autoplay loop muted>
             Your browser does not support the video element.
         </video>
-    </div>
-    <div class="input-container">
-        <input type="file" id="file-input" accept="video/*,image/gif" style="display: none">
-        <button id="file-btn">Choose File</button>
-    </div>
-    <div class="input-container">
-        <input type="text" id="text-input" placeholder="Enter text to overlay...">
-    </div>
-    <div class="button-container">
-        <button id="render-btn" disabled>Render</button>
-        <button id="copy-btn" disabled>Export</button>
     </div>
     <script src="renderer.js"></script>
 </body>
