--- a/index.html
+++ b/index.html
@@ -12,15 +12,14 @@
             overflow: hidden;
         }
         #video-container {
-            width: 100vw;
-            height: 100vh;
+            width: 100%;
+            height: 100%;
             position: relative;
             background-color: #e0e0e0;
             display: flex;
             align-items: center;
             justify-content: center;
             border: none;
-            transition: all 0.3s ease;
         }
         #video-container.drag-over {
             background-color: #d0d0d0;
@@ -40,6 +39,15 @@
         }
         video.has-video {
             display: block;
+        }
+        video:hover {
+            cursor: none;
+        }
+        video:hover::-webkit-media-controls-panel {
+            display: none !important;
+        }
+        video::-webkit-media-controls-panel {
+            transition: all 0.3s ease;
         }
         #text-input, #url-input {
             padding: 10px;
