--- a/index.html
+++ b/index.html
@@ -127,6 +127,10 @@
         #render-btn {
             flex: 1;
         }
+        @font-face {
+            font-family: impactCustom;
+            src: url(impact.ttf);
+        }
         .overlay-text-input {
             position: absolute;
             top: 50%;
@@ -149,6 +153,7 @@
             min-height: 1em;
             max-height: 80vh;
             white-space: pre-wrap;
+            font-family: 'impactCustom', sans-serif;
         }
         .overlay-text-input.active {
             display: block;
