--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
             src: url(impact.ttf);
         }
         .overlay-text-input {
+            padding: 0px;
             position: absolute;
             top: 50%;
             left: 50%;
@@ -160,6 +161,24 @@
         }
         .overlay-text-input:focus {
             cursor: text;
+        }
+        .render-overlay {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background-color: rgba(0, 0, 0, 0.7);
+            color: white;
+            padding: 20px 40px;
+            border-radius: 8px;
+            font-size: 24px;
+            z-index: 2000;
+            animation: pulse 1.5s infinite;
+        }
+        @keyframes pulse {
+            0% { opacity: 0.7; }
+            50% { opacity: 0.9; }
+            100% { opacity: 0.7; }
         }
     </style>
 </head>
