--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 </head>
 <body>
     <div id="video-container">
-        <div id="drop-text">Drag and drop a video here</div>
+        <div id="drop-text"></div>
         <video id="video-preview" controls autoplay loop muted>
             Your browser does not support the video element.
         </video>
