positioned text a bit better

--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
         }
         .overlay-text-input {
             padding: 0px;
+            margin: 0px;
             position: absolute;
             top: 50%;
             left: 50%;
