--- a/index.html
+++ b/index.html
@@ -132,20 +132,15 @@
             src: url(impact.ttf);
         }
         .overlay-text-input {
-            padding: 0px;
-            margin: 0px;
+            padding: 0;
+            margin: 0;
             position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
             background: transparent;
             border: none;
             color: white;
             font-size: 24px;
             text-align: left;
-            width: 80%;
             outline: none;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
             display: none;
             z-index: 1000;
             cursor: move;
@@ -156,6 +151,7 @@
             max-height: 80vh;
             white-space: pre-wrap;
             font-family: 'impactCustom', sans-serif;
+            line-height: 1;
         }
         .overlay-text-input.active {
             display: block;
@@ -165,9 +161,6 @@
         }
         .render-overlay {
             position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
             background-color: rgba(0, 0, 0, 0.7);
             color: white;
             padding: 20px 40px;
