--- a/index.html
+++ b/index.html
@@ -141,21 +141,22 @@
             font-size: 24px;
             text-align: left;
             outline: none;
-            display: none;
-            z-index: 1000;
-            cursor: move;
-            user-select: none;
-            white-space: nowrap;
-            overflow-x: auto;
-            overflow-y: hidden;
-            resize: none;
+            /*display: none;*/
+            /*z-index: 1000;*/
+            /*cursor: move;*/
+            /*user-select: none;*/
+            /*white-space: nowrap;*/
+            /*overflow-x: auto;*/
+            /*overflow-y: hidden;*/
+            /*resize: none;*/
             width: 1000px;
-            overflow: hidden;
-            min-height: 1em;
-            max-height: 80vh;
-            white-space: pre-wrap;
+            /*height: 1000px;*/
+            /*overflow: hidden;*/
+            min-height: 1000px;
+            /*max-height: 80vh;*/
+            /*white-space: pre-wrap;*/
             font-family: 'impactCustom', sans-serif;
-            line-height: 1.2;
+            line-height: 1.0;
         }
         .overlay-text-input.active {
             display: block;
