add black outline to text

--- a/index.html
+++ b/index.html
@@ -137,6 +137,12 @@
             min-height: 1000px;
             font-family: 'impactCustom', sans-serif;
             line-height: 1.0;
+            /*-webkit-text-stroke: 0.03em black;*/
+            text-shadow: 
+                -0.03em -0.03em 0 #000,  
+                0.03em -0.03em 0 #000,
+                -0.03em 0.03em 0 #000,
+                0.03em 0.03em 0 #000;
         }
         .overlay-text-input.active {
             display: block;
