--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             padding: 0;
             background-color: #f0f0f0;
             height: 100vh;
-            overflow: hidden;
+            overflow: clip;
         }
         #video-container {
             width: 100%;
